框架优化 @mixin webkit优化

--- a/src/styles/config.scss
+++ b/src/styles/config.scss
@@ -1,2 +1,11 @@
 $navWidth: 250px;
+$navCloseWidth: 64px;
 $layoutHeader: 75px;
+
+@mixin webkit ($type, $value) {
+  -webkit-#{$type}: $value;
+  -moz-#{$type}: $value;
+  -o-#{$type}: $value;
+  -ms-#{$type}: $value;
+  #{$type}: $value;
+}
