--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -1,27 +1,27 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
-html,
-body,
-ul,
-li,
-ol,
-dl,
-dd,
-dt,
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-form,
-fieldset,
-legend,
-img {
-  margin: 0;
-  padding: 0;
-}
+// html,
+// body,
+// ul,
+// li,
+// ol,
+// dl,
+// dd,
+// dt,
+// p,
+// h1,
+// h2,
+// h3,
+// h4,
+// h5,
+// h6,
+// form,
+// fieldset,
+// legend,
+// img {
+//   margin: 0;
+//   padding: 0;
+// }
 
 /* Document
    ========================================================================== */
